<resources>
    <string name="app_name">View Binding Kotlin Synthetic</string>
    <string name="content_description_android_logo">Android logo</string>
    <string name="name_label">Name:</string>
    <string name="name">Felix Arvid Ulf Kjellberg</string>
    <string name="nickname_label">Nickname:</string>
    <string name="nickname">PewDiePie</string>
    <string name="country_label">Country:</string>
    <string name="country">Sweden</string>
    <string name="button_text">Click me</string>

    <string name="styles_label">Styles:</string>
    <string name="style_one">Games</string>
    <string name="style_two">Comedy</string>
    <string name="style_three">React</string>
    <string name="style_four">Terror</string>
</resources>