<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_small"
        android:contentDescription="@string/content_description_android_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/android" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_small" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/name_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_tiny"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintStart_toEndOf="@+id/labelsBarrier"
        app:layout_constraintTop_toBottomOf="@+id/logoImage"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/nicknameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/nickname_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/nicknameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_tiny"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintStart_toEndOf="@+id/labelsBarrier"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        tools:text="@string/nickname" />

    <TextView
        android:id="@+id/countryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/country_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/nicknameLabel" />

    <TextView
        android:id="@+id/countryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_tiny"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintStart_toEndOf="@+id/labelsBarrier"
        app:layout_constraintTop_toBottomOf="@+id/nicknameText"
        tools:text="@string/country" />

    <Button
        android:id="@+id/clickmeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labelsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="nameLabel,nicknameLabel,countryLabel" />

    <TextView
        android:id="@+id/stylesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:text="@string/styles_label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/countryLabel" />

    <com.google.android.material.chip.Chip
        android:id="@+id/styleOneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toStartOf="@+id/styleTwoText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stylesLabel"
        tools:text="@string/style_one" />

    <com.google.android.material.chip.Chip
        android:id="@+id/styleTwoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toStartOf="@+id/styleThreeText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/styleOneText"
        app:layout_constraintTop_toBottomOf="@+id/stylesLabel"
        tools:text="@string/style_two" />

    <com.google.android.material.chip.Chip
        android:id="@+id/styleThreeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toStartOf="@+id/styleFourText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/styleTwoText"
        app:layout_constraintTop_toBottomOf="@+id/stylesLabel"
        tools:text="@string/style_three" />

    <com.google.android.material.chip.Chip
        android:id="@+id/styleFourText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/styleThreeText"
        app:layout_constraintTop_toBottomOf="@+id/stylesLabel"
        tools:text="@string/style_four" />

</androidx.constraintlayout.widget.ConstraintLayout>